Global loading Layout shift fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,3 +117,11 @@ select::-ms-expand {
   margin: 0;
   color: #fff1f2;
 }
+
+html {
+  overflow-y: scroll;
+}
+
+body {
+  overflow-x: hidden;
+}
